--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -155,8 +155,8 @@ jobs:
           strip = true
           EOF
 
-      - name: Build release binary
-        run: ${{ env.CARGO }} build --release --locked --target ${{ matrix.target }}
+      - name: Build debug binary
+        run: ${{ env.CARGO }} build --locked --target ${{ matrix.target }}
 
       - name: Build AppImage
         shell: bash
@@ -211,9 +211,9 @@ jobs:
         run: |
           mkdir -p dist
           if [ "${{ matrix.os }}" = "windows-2019" ]; then
-            cp "target/${{ matrix.target }}/release/hx.exe" "dist/"
+            cp "target/${{ matrix.target }}/debug/hx.exe" "dist/"
           else
-            cp "target/${{ matrix.target }}/release/hx" "dist/"
+            cp "target/${{ matrix.target }}/debug/hx" "dist/"
           fi
           if [ -d runtime/grammars/sources ]; then
             rm -rf runtime/grammars/sources
@@ -286,7 +286,7 @@ jobs:
           file_glob: true
           tag: ${{ github.ref_name }}
           overwrite: true
-      
+
       - name: Upload binaries as artifact
         uses: actions/upload-artifact@v3
         if: env.preview == 'true'
